tests/ui/solver-attribute/no-arg/expected
error: the `#[kani::solver]` attribute expects a single argument. Got 0 arguments.\
test.rs:\
|\
| #[kani::solver]\
| ^^^^^^^^^^^^^^^
error: aborting due to 1 previous error
